#4 Fixed wrapping coords

--- a/assets/css/astrometry.css
+++ b/assets/css/astrometry.css
@@ -188,17 +188,18 @@
 }
 .astrometry-data > * {
   margin:0;
-  white-space: nowrap;
   grid-column: 2 / span 3;  
 }
 .astrometry-data > .col2 {
   grid-column: 2;
+  white-space: nowrap;
 }
 .astrometry-data > .col3 {
   grid-column: 3;
 }
 .astrometry-data > .col4 {
   grid-column: 4;
+  white-space: nowrap;
 }
 .astrometry-data label {
   font-size: inherit;
